--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -13,7 +13,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="40dp"
+        android:layout_margin="30dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp">
 
@@ -59,17 +59,17 @@
                 android:textColor="@color/black"/>
 
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/editUsername"
-                android:background="@drawable/custom_edittext"
-                android:layout_marginTop="20dp"
-                android:padding="8dp"
-                android:hint="@string/username"
-                android:drawableLeft="@drawable/baseline_person_pin_24"
-                android:drawablePadding="8dp"
-                android:textColor="@color/black"/>
+<!--            <EditText-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:id="@+id/editUsername"-->
+<!--                android:background="@drawable/custom_edittext"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                android:padding="8dp"-->
+<!--                android:hint="@string/username"-->
+<!--                android:drawableLeft="@drawable/baseline_person_pin_24"-->
+<!--                android:drawablePadding="8dp"-->
+<!--                android:textColor="@color/black"/>-->
 
             <EditText
                 android:layout_width="match_parent"
@@ -81,8 +81,7 @@
                 android:hint="@string/password"
                 android:inputType="textPassword"
                 android:drawableLeft="@drawable/baseline_lock_24"
-                android:drawablePadding="8dp"
-                android:textColor="@color/black"/>
+                android:drawablePadding="8dp" />
 
             <Button
                 android:layout_width="match_parent"
