--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -176,7 +176,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/password"
+                android:text="Phone Number"
                 android:textColor="@color/blue_gradient"
                 android:textSize="18sp"
                 android:textStyle="bold" />
