--- a/app/src/main/res/layout/fragment_device.xml
+++ b/app/src/main/res/layout/fragment_device.xml
@@ -1,15 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_bg"
     tools:context=".view.DeviceFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <RelativeLayout
+        android:id="@+id/r1"
+        android:layout_width="500dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="100dp">
 
-    </LinearLayout>
 
-</FrameLayout>
+        <RelativeLayout
+            android:id="@+id/a1"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="50dp"
+            android:background="@drawable/vien">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:src="@drawable/livingroom" />
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/livingroom"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:text="Phòng khách"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:layout_toRightOf="@id/a1"
+            android:layout_marginTop="80dp"
+            android:background="#050202"/>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/r2"
+        android:layout_width="500dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="300dp">
+
+
+        <Button
+            android:id="@+id/kitchen"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="80dp"
+            android:layout_toRightOf="@id/a2"
+            android:textStyle="bold"
+            android:textColor="#ffff"
+            android:background="#285070"
+            android:text="Phòng Bếp" />
+
+        <RelativeLayout
+            android:id="@+id/a2"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="50dp"
+            android:background="@drawable/vien">
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginBottom="1dp"
+                android:src="@drawable/bep" />
+        </RelativeLayout>
+
+    </RelativeLayout>
+</RelativeLayout>
